# cmake-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: MyLibrary.hpp
src/: CMakeLists.txt  MyLibrary.cpp
src/include/part1/: lib_one.h
src/include/part2/: lib_two.h
src/include/part3/: lib_three.h
src/part1/: CMakeLists.txt  print_goodbye.cpp  print_hello.cpp
src/part2/: CMakeLists.txt  lib_two.cpp
src/part3/: CMakeLists.txt  lib_three.cpp
test/: CMakeLists.txt  test.cpp
test/part1/: lib_one_test.cpp
test/part2/: lib_two_test.cpp
test/part3/: lib_three_test.cpp
tests/: test_main.cpp
